[fix] WebSocket STOMP CONNECT 인증 실패 시 연결 거부
토큰 누락·검증 실패·사용자 미조회 시 CONNECT를 차단하고, SUBSCRIBE/SEND도 인증 없으면 거부합니다.

Co-authored-by: Cursor <cursoragent@cursor.com>