@@ -10,14 +10,22 @@ import org.springframework.messaging.simp.stomp.StompCommand;
 import org.springframework.messaging.simp.stomp.StompHeaderAccessor;
 import org.springframework.messaging.support.ChannelInterceptor;
 import org.springframework.messaging.support.MessageHeaderAccessor;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.stereotype.Component;
 
+import java.security.Principal;
 import java.util.List;
+import java.util.Set;
 
 @Component
 @RequiredArgsConstructor
 public class StompJwtChannelInterceptor implements ChannelInterceptor {
+
+    private static final Set<StompCommand> AUTH_REQUIRED_COMMANDS = Set.of(
+            StompCommand.SUBSCRIBE,
+            StompCommand.SEND
+    );
 
     private final JwtUtil jwtUtil;
     private final UserRepository userRepository;
@@ -25,32 +33,59 @@ public class StompJwtChannelInterceptor implements ChannelInterceptor {
     @Override
     public Message<?> preSend(Message<?> message, MessageChannel channel) {
         StompHeaderAccessor accessor = MessageHeaderAccessor.getAccessor(message, StompHeaderAccessor.class);
-        if (accessor == null || accessor.getCommand() != StompCommand.CONNECT) {
+        if (accessor == null || accessor.getCommand() == null) {
             return message;
         }
-        String token = resolveToken(accessor);
-        if (token == null) {
+
+        if (accessor.getCommand() == StompCommand.CONNECT) {
+            authenticateConnect(accessor);
             return message;
+        }
+
+        if (AUTH_REQUIRED_COMMANDS.contains(accessor.getCommand())) {
+            requireAuthenticated(accessor);
+        }
+
+        return message;
+    }
+
+    private void authenticateConnect(StompHeaderAccessor accessor) {
+        String token = resolveToken(accessor);
+        if (token == null || token.isBlank()) {
+            throw new AccessDeniedException("Missing WebSocket token");
         }
         try {
             var claims = jwtUtil.validateToken(token);
-            Long userId = Long.valueOf(claims.getSubject());
-            User user = userRepository.findById(userId).orElse(null);
-            if (user != null) {
-                UsernamePasswordAuthenticationToken auth =
-                        new UsernamePasswordAuthenticationToken(user, null, List.of());
-                accessor.setUser(auth);
+            String subject = claims.getSubject();
+            if (subject == null || subject.isBlank()) {
+                throw new AccessDeniedException("Invalid WebSocket token subject");
             }
-        } catch (Exception ignored) {
-            // 연결은 허용하되 인증 없이 처리 (클라이언트에서 토큰 필수 권장)
+            Long userId = Long.valueOf(subject);
+            User user = userRepository.findById(userId)
+                    .orElseThrow(() -> new AccessDeniedException("User not found for token subject"));
+            UsernamePasswordAuthenticationToken auth =
+                    new UsernamePasswordAuthenticationToken(user, null, List.of());
+            accessor.setUser(auth);
+        } catch (AccessDeniedException ex) {
+            throw ex;
+        } catch (NumberFormatException ex) {
+            throw new AccessDeniedException("Invalid WebSocket token subject", ex);
+        } catch (Exception ex) {
+            throw new AccessDeniedException("Invalid WebSocket token", ex);
         }
-        return message;
+    }
+
+    private void requireAuthenticated(StompHeaderAccessor accessor) {
+        Principal user = accessor.getUser();
+        if (user == null) {
+            throw new AccessDeniedException("Unauthenticated WebSocket session");
+        }
     }
 
     private String resolveToken(StompHeaderAccessor accessor) {
         List<String> authHeaders = accessor.getNativeHeader("Authorization");
         if (authHeaders != null && !authHeaders.isEmpty()) {
-            String value = authHeaders.get(0);
+            String value = authHeaders.getFirst();
             if (value.startsWith("Bearer ")) {
                 return value.substring(7);
             }
@@ -58,7 +93,7 @@ public class StompJwtChannelInterceptor implements ChannelInterceptor {
         }
         List<String> tokens = accessor.getNativeHeader("accessToken");
         if (tokens != null && !tokens.isEmpty()) {
-            return tokens.get(0);
+            return tokens.getFirst();
         }
         return null;
     }
